--- a/src/index.css
+++ b/src/index.css
@@ -132,3 +132,16 @@ th.precio {
  */
 
 /*End Modal Styles*/
+
+@media print {
+
+  .btn,
+  .btn * {
+    display: none !important;
+  }
+
+  .card {
+    height: 312px;
+    min-height: 312px;
+  }
+}
