--- a/src/index.css
+++ b/src/index.css
@@ -68,8 +68,6 @@ th.precio {
   }
 }
 
-
-
 .contenedor-modal {
   width: 500px;
   min-height: 100px;
@@ -108,32 +106,7 @@ th.precio {
   background: #f2f2f2;
 }
 
-/*Modal Styles*/
-/* .overlay {
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, .5);
-
-  padding: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-}
-
-.encabezado-modal h3 {
-  font-weight: 500;
-  font-size: 16px;
-  color: #1766DC;
-}
- */
-
-/*End Modal Styles*/
-
-@media print {
+/* @media print {
 
   .btn,
   .btn * {
@@ -146,3 +119,32 @@ th.precio {
   }
 }
 
+@media (width <=576px) {
+  .card {
+    height: 500px;
+  }
+}
+
+@media (576px <=width <=768px) {
+  .card {
+    height: 390px;
+  }
+}
+
+@media (769px <=width <=992px) {
+  .card {
+    height: 390px;
+  }
+}
+
+@media (993px <=width <=1200px) {
+  .card {
+    height: 360px;
+  }
+}
+
+@media (width >=1400px) {
+  .card {
+    background: green;
+  }
+} */
